# llm-projects

./: README.md  pyproject.toml
notebooks/: 1_answer_question.ipynb  2_chatbot_text_audio.ipynb
