[project]
name = "llm-projects"
version = "0.1.0"
description = "This repository showcases my skills in LLM engineering."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.0.2",
    "ipykernel>=7.1.0",
    "litellm>=1.80.7",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
]
